--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".OpcionesMagnetismo"
+            android:exported="false" />
+        <activity
             android:name=".MUA"
             android:exported="false" />
         <activity
