--- a/MyApplication/gradle.properties
+++ b/MyApplication/gradle.properties
@@ -1,4 +1,5 @@
 # Project-wide Gradle settings.
+sdk.dir=C\:\\users\\Asus\\AppData\\Local\\Android\\sdk
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
